tests/test_repo/test_repo_expected_stderr.txt
clang-format.............................................................Failed
- hook id: clang-format
- exit code: 1

err.c
====================
--- original

+++ formatted

@@ -1 +1,4 @@

-int main(){int i;return;}
+int main() {
+  int i;
+  return;
+}
err.cpp
====================
--- original

+++ formatted

@@ -1 +1,4 @@

-int main(){int i;return;}
+int main() {
+  int i;
+  return;
+}

clang-tidy...............................................................Failed
- hook id: clang-tidy
- exit code: 1

/home/rj/code/pre-commit-hooks/tests/test_repo/err.c:1:18: error: non-void function 'main' should return a value [clang-diagnostic-return-type]
int main(){int i;return;}
                 ^
1 error generated.
Error while processing /home/rj/code/pre-commit-hooks/tests/test_repo/err.c.
Found compiler error(s).

oclint...................................................................Failed
- hook id: oclint
- exit code: 6

Compiler Errors:
(please be aware that these errors will prevent OCLint from analyzing this source code)

/home/rj/code/pre-commit-hooks/tests/test_repo/err.c:1:18: non-void function 'main' should return a value

Clang Static Analyzer Results:

/home/rj/code/pre-commit-hooks/tests/test_repo/err.c:1:18: non-void function 'main' should return a value


OCLint Report

Summary: TotalFiles=0 FilesWithViolations=0 P1=0 P2=0 P3=0


[OCLint (http://oclint.org) v0.13.1]

uncrustify...............................................................Failed
- hook id: uncrustify
- exit code: 1

err-iwyu.hpp
====================
--- original

+++ formatted

@@ -1,4 +1,5 @@

 #include <string>
 #include <vector>
-void foo(std::string s) {}
+void foo(std::string s) {
+}

err.c
====================
--- original

+++ formatted

@@ -1 +1,3 @@

-int main(){int i;return;}
+int main(){
+	int i; return;
+}
err.cpp
====================
--- original

+++ formatted

@@ -1 +1,3 @@

-int main(){int i;return;}
+int main(){
+	int i; return;
+}

cppcheck.................................................................Failed
- hook id: cppcheck
- exit code: 1

err-iwyu.hpp:3:22: performance: Function parameter 's' should be passed by const reference. [passedByValue]
void foo(std::string s) {}
                     ^

cpplint..................................................................Failed
- hook id: cpplint
- exit code: 1

Done processing err-iwyu.hpp
Total errors found: 2
err-iwyu.hpp:0:  No copyright message found.  You should have a line: "Copyright [year] <Copyright Owner>"  [legal/copyright] [5]
err-iwyu.hpp:0:  No #ifndef header guard found, suggested CPP variable is: TESTS_TEST_REPO_ERR_IWYU_HPP_  [build/header_guard] [5]

include-what-you-use.....................................................Failed
- hook id: include-what-you-use
- exit code: 3

err-iwyu.hpp should add these lines:

err-iwyu.hpp should remove these lines:
- #include <vector>  // lines 2-2

The full include-list for err-iwyu.hpp:
#include <string>  // for string
---
